ops/k8s/express-api-deployment.yaml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: express-api-deployment
spec:
  replicas: 2
  selector:
    matchLabels:
      app: express-redis
  template:
    metadata:
      labels:
        app: express-redis
    spec:
      containers:
      - name: express-api-container
        image: express-api-container:0.0.1
        imagePullPolicy: Never
        ports:
        - containerPort: 3000
