ops/k8s/express-api-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: express-api
spec:
  selector:
    app: express-redis
  ports:
  - port: 3000
    protocol: TCP
    name: http
