ops/k8s/redis-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: redis
spec:
  selector:
    app: express-redis
  ports:
  - name: redis
    port: 6379
  clusterIP: None
