ops/k8s/express-api-ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: express-api-ingress
  annotations:
    kubernetes.io/ingress.class: "nginx"
    nginx.ingress.kubernetes.io/rewrite-target: /
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
spec:
  rules:
  - host: express-redis.lol
    http:
      paths:
      - path: /express-api
        backend:
          serviceName: express-api
          servicePort: 3000
